poe-woc_ingress/backend-poe.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend 
  labels:
    app: backend
spec:
  replicas: 2
  strategy:
    blueGreen:
      activeService: backend
      previewService: backend-preview
      autoPromotionEnabled: true 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-k8s
        image: cyna58/nauka-kubernetes:poe_v5
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
 
---
apiVersion: v1
kind: Service
metadata:
  name: backend-preview
spec:
  selector:
    app: backend
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
