poe-woc_ingress/mongo-gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-gui
  labels:
    app: mongo-gui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-gui
  template:
    metadata:
      labels:
        app: mongo-gui
    spec:
      containers:
      - name: mongo-gui
        image: cyna58/nauka_kubernetes:mongoexpress
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-gui
spec:
  selector:
    app: mongo-gui
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
