poe-woc_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poe-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: poe.local
    http:
      paths:
      - path: /gui
        pathType: Prefix          
        backend:
          service:               
            name: mongo-gui
            port:
              number: 8081
      - path: /
        pathType: Prefix         
        backend:
          service:               
            name: frontend
            port:
              number: 80
